<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:rowCount="7"
    android:columnCount="4">

    <!--Line one 显示框-->
    <TextView
        android:id="@+id/tvResult"
        android:layout_columnSpan="4"
        android:layout_gravity="fill"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#FFCCCC"
        android:text="0"
        android:textSize="50sp"/>

    <!--Line two -->
    <Button
        android:id="@+id/btnBackspace"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/BTNBACKSPACE"/>

    <Button
        android:id="@+id/btnCE"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:text="@string/btnCE"/>

    <!--Line three 123+ -->
    <Button
        android:id="@+id/btn1"
        android:text="@string/btn1"/>
    <Button
        android:id="@+id/btn2"
        android:text="@string/btn2"/>
    <Button
        android:id="@+id/btn3"
        android:text="@string/btn3"/>
    <Button
        android:id="@+id/btnAdd"
        android:text="@string/btnAdd"/>

    <!--Line four 456- -->
    <Button
        android:id="@+id/btn4"
        android:text="@string/btn4"/>
    <Button
        android:id="@+id/btn5"
        android:text="@string/btn5"/>
    <Button
        android:id="@+id/btn6"
        android:text="@string/btn6"/>
    <Button
        android:id="@+id/btnMul"
        android:text="@string/btnMul"/>

    <!--Line five 789*-->
    <Button
        android:id="@+id/btn7"
        android:text="@string/btn7"/>
    <Button
        android:id="@+id/btn8"
        android:text="@string/btn8"/>
    <Button
        android:id="@+id/btn9"
        android:text="@string/btn9"/>
    <Button
        android:id="@+id/btnDiv"
        android:text="@string/btnDiv"/>

    <!--Line six .0=/ -->
    <Button
        android:id="@+id/btn0"
        android:text="@string/btn0"/>
    <Button
        android:id="@+id/btnC"
        android:text="@string/btnC"/>
    <Button
        android:id="@+id/btnEqu"
        android:text="@string/btnEqu"/>
    <Button
        android:id="@+id/btnSub"
        android:text="@string/btnSub"/>


    <!--line seven-->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/qq"
            android:onClick="imgClick"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="动画"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="86dp"
            android:onClick="buttonClick"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_to_acti2"
            android:onClick="buttonClick1"
            android:text="to_acti2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_to_acti3"
            android:onClick="buttonClick2"
            android:text="to_acti3"/>

</GridLayout>


